--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ div.callouts{
   text-align: center;
   width:100%;
   background: url(images/cb-bg-1.jpg);
-  padding: 15px;
 }
 
 footer{
@@ -26,35 +25,39 @@ footer{
 }
 
 nav.top_nav {
-height: 40px;
+  background: black;
+  height: 40px;
 }
 
 .center.nav_icon{
   background: black;
   display: inline-block;
-  width: 68%;
+  width: 70%;
   padding-left: 5%;
   padding-right: 5%;
-  border-left: 1px solid #BDBDBD;
-  border-right: 1px solid #BDBDBD;
-  margin-top: 5px;
 }
 
 .right.nav_icon {
   background: black;
   width: 10%;
-  display: inline-block;
+
 }
 
 .left.nav_icon {
   background: black;
   width: 10%;
-  display: inline-block;
 }
 
 .nav_icon{
   text-align: center;
   vertical-align: middle;
+  display: inline-block;
+  margin-top: .6em;
+}
+
+.center.nav_icon img {
+  width: 300px;
+  max-width: 100%;
 }
 
 .white {
@@ -64,7 +67,7 @@ font-family: sans-serif;
 
 .pretty{
   width: 100%;
-  font-size: 26pt;
+  font-size: 16pt;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -73,8 +76,8 @@ font-family: sans-serif;
 .pretty.line1{
   font-family: cursive;
   line-height: 0.9;
-  padding-top: 30px;
-  font-size: 32pt;
+  padding-top: 10px;
+  font-size: 24pt;
 }
 
 .pretty.line2{
@@ -102,7 +105,8 @@ font-family: sans-serif;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 15px;
-  width:248px;
+  width: 80%;
+  max-width: 360px;
   font-size: normal;
   padding: 16px;
   color: white;
@@ -113,6 +117,10 @@ font-family: sans-serif;
 
 img.callout{
   margin: 15px;
+  width: 80%;
+  max-width: 360px;
+  height: auto;
+  width: auto\9
 }
 
 .rounded{
@@ -143,6 +151,17 @@ font-family: sans-serif;
 display: inline-block;
 font-size: 9pt;
 float: right;
-margin: 7px;
-margin-bottom: 20px;
+margin: 0;
+margin-left: 8px;
+}
+
+form {
+  margin: 0;
+}
+
+@media (min-width: 750px) {
+  
+  img.callout{
+    width: 25%;
+  }
 }
